checked in code

--- a/WelcomeApp/Views/Shared/_Layout.cshtml
+++ b/WelcomeApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <table><tr><td> <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p></td> <p style="float: right;"><b>Application Version 1.0</b></p><td></td></tr></table>
+           
+           
         </footer>
     </div>
 
