--- a/WelcomeApp/Views/Home/Index.cshtml
+++ b/WelcomeApp/Views/Home/Index.cshtml
@@ -3,28 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great1 Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <h1>Staples Tech Services</h1>
+    <p class="lead">UP AND RUNNING IN NO TIME.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Total Defense PC Tune Up </h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Total Defense PC Tune-Up is designed to eliminate slow startupsand keep your Windows PC operating at peak performance, whileimproving the stability of your system. An easy-to-use interfacemakes it simple to optimize your PC.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Virus & Malware Removal</h2>
+        <p>
+            Transfer data from your old machine to new one
+            Create system restore media
+            Install up to three peripherals or software titles
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
+        <h2>EasyTech Premier PC Set-Up</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
