--- a/WelcomeApp/Views/Shared/_Layout.cshtml
+++ b/WelcomeApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <table><tr><td> <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p></td> <p style="float: right;"><b>Application Version 1.3</b></p><td></td></tr></table>
+            <table><tr><td> <p>&copy; @DateTime.Now.Year - Staples</p></td> <p style="float: right;"><b>Application Version 1.3</b></p><td></td></tr></table>
            
            
         </footer>
