--- a/WelcomeApp/Views/Home/Index.cshtml
+++ b/WelcomeApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>Staples Tech Services</h1>
+    <h1>Tech Services</h1>
     <p class="lead">UP AND RUNNING IN NO TIME.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
